about footer header main basically done, need to fix icon colors in footer

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
+  background-color: #024059;
   text-align: center;
+  color: white; /* Set the text color to white */
+  font-weight: bold; /* Make the text bold */
+  text-shadow: 
+    -2px -2px 0 black, /* Top-left shadow */
+    2px -2px 0 black, /* Top-right shadow */
+    -2px 2px 0 black, /* Bottom-left shadow */
+    2px 2px 0 black; /* Bottom-right shadow */
 }
 
 .App-logo {
@@ -21,7 +29,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .App-link {
@@ -35,4 +43,136 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.header {
+  background-color: #F2CC0F;
+  color: rgb(255, 255, 255); /* Updated text color to black */
+  padding: 20px;
+  display: flex;
+  justify-content: center; /* Center align navigation buttons */
+  align-items: center;
+  text-shadow: 
+  -.5px -.5px 0 black, /* Top-left shadow */
+  .5px -.5px 0 black, /* Top-right shadow */
+  -.5px .5px 0 black, /* Bottom-left shadow */
+  .5px .5px 0 black; /* Bottom-right shadow */
+  background-size: contain;
+  background-position: bottom;
+  background-repeat: repeat;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-title {
+  color: rgb(255, 255, 255);
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.header-links {
+  display: flex;
+  gap: 20px;
+}
+
+.header-link {
+  color: white;
+  text-decoration: none;
+}
+
+.header-link:hover {
+  text-decoration: underline;
+}
+
+.header-link.active {
+  font-weight: bold;
+  color: red; /* Customize the active link color */
+}
+
+
+.footer {
+  background-size: contain;
+  background-position: right right;
+  background-repeat: repeat;
+}
+
+.footer-text {
+  margin-top: 0;
+}
+
+.footer-center {
+  font-size: 3rem;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+
+
+.profile-section {
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin: 0;
+  padding: 0;
+}
+
+.profile-image img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 20px;
+}
+
+
+/* used for wide image after profile pic but before hobbies */
+.wide-image {
+  width: 100vw; /* 100% of viewport width */
+  height: 50vh; 
+  overflow: hidden; /* Hide any overflow content */
+}
+/* used for wide image after profile pic but before hobbies */
+.wide-image img {
+  width: 100%; /* Make the image take up 100% of the div's width */
+  height: 100%;
+  max-height: 481.5px; 
+  min-width: 600px;
+  background-size: cover;
+  background-position: center center;
+}
+
+.about-text {
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+.aboutLast {
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+.description-section {
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 370.8px;
+  margin: 0;
+  padding: 0;
+}
+
+.description-section li {
+  list-style-type: none;
+  padding-left: 0; /* Remove default left padding */
+}
+
+.desc-header {
+  margin: 0;
+  padding: 0;
+}
+
+.about-page {
+  background-color: #024059;
 }
